--- a/notebooks/02-neighbor-graphs.ipynb
+++ b/notebooks/02-neighbor-graphs.ipynb
@@ -1087,7 +1087,7 @@
    "id": "60320bc1-06e1-41b0-b719-c381f51507e5",
    "metadata": {},
    "source": [
-    "While this is a randomly chosen solution, hopefully it's significantly better than the baseline. If look closely at the locations and expected distance regions, you should see a lot less overlap."
+    "While this is a randomly chosen solution, hopefully it's significantly better than the baseline. If you look closely at the locations and expected distance regions, you should see a lot less overlap."
    ]
   },
   {
@@ -1325,7 +1325,7 @@
     "\n",
     "So far we've been assuming that each solution is unique. Randomly selecting the largest graphs definitely generates a variety of solutions but is there a limit to the number of unique solutions?\n",
     "\n",
-    "The plot below shows a steady decline in the percentage of unique solutions. By fitting a linear regression line to the last 200 data points where we see steady decline, we can extrapolate to estimate total number of unique solutions"
+    "The plot below shows a steady decline in the percentage of unique solutions. By fitting a linear regression line to the last 200 data points where we see steady decline, we can extrapolate to estimate total number of unique solutions."
    ]
   },
   {
