--- a/notebooks/03-probe-clusters.ipynb
+++ b/notebooks/03-probe-clusters.ipynb
@@ -290,7 +290,7 @@
    "source": [
     "# Estimating Probe Recovery\n",
     "\n",
-    "We saw in the Neighbor Graphs experiment that each graph we select modifies the graphs we have to choose from in next iteration. In the analysis above, we provide rationale that selecting a graph doesn't just change the graphs we have to choose from, it also dramatically reduces the number of locations we have left to explore.\n",
+    "We saw in the Neighbor Graphs experiment that each graph we select modifies the graphs we have to choose from in the next iteration. In the analysis above, we provide a rationale that selecting a graph doesn't just change the graphs we have to choose from, it also dramatically reduces the number of locations we have left to explore.\n",
     "\n",
     "Let's say we dig 1 test hole for each graph we select. A single hole should be enough to tell if the entire cluster of probes is on this side of the diagonal or not. If no probe is found at the test location, we should look for the entire cluster on the other side.\n",
     "\n",
@@ -506,7 +506,7 @@
     "\n",
     "We saw how the probes naturally fall into clusters that all fit well within the expected nearest neighbor distance constraints. The larger the cluster, the more likely the locations are correct. However, the distance between probes doesn't change as long as we transpose the entire cluster. This means each cluster of probes fits just as well on either side of the diagonal. There is no way to know which side of the diagonal a cluster is on given the information we have.\n",
     "\n",
-    "That said, we should still be able to dramatically reduce the probe recovery time by recomputing the plan with each hole dug. The idea is to start with all 100 possible locations and test the clusters from largest to smallest. Choose either side of the diagonal and dig a test hole. If the probe is found, add all locations in the cluster to our confirmed list. If not, add the probes' alternate locations to our confirmed list. Remove any candidate locations that are ruled out by this choice. Repeat the process with the remaining candidates.\n",
+    "That said, we should still be able to dramatically reduce the probe recovery time by recomputing the plan after digging each hole. The idea is to start with all 100 possible locations and test the clusters from largest to smallest. Choose either side of the diagonal and dig a test hole. If the probe is found, add all locations in the cluster to our confirmed list. If not, add the probes' alternate locations to our confirmed list. Remove any candidate locations that are ruled out by this choice. Repeat the process with the remaining candidates.\n",
     "\n",
     "Following this process should require between 50 and 64 holes. If every test hole we dig is a hit, we'll only need 50 holes to recover all 50 probes. If every test hole we dig is a miss, we should need 14 test holes plus the 50 holes to recover the probes."
    ]
